--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -4,6 +4,20 @@ html {
     -webkit-text-size-adjust:100%;
     scrollbar-color: rgb(39, 43, 51) yellow;
    }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(39, 43, 51);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: yellow;
+}
+
 body {
     margin:0;
     overflow-y: scroll;
@@ -366,14 +380,19 @@ h2 {
   margin-left: 20px;
 }
 
-.artistMembers h2,
-.tourDates h2 {
+.idMembers,
+.idTourDates{
   margin-top: 20px;
   font-size: 24px;
   color: yellow; 
   text-decoration: underline;
-  text-underline-offset: 10px; 
+  text-underline-offset: 10px;
   text-decoration-color: yellow;
+}
+
+.idImgText {
+  color: white;
+  padding-left: 20px;
 }
 
   .searchBar {
