01FCLogo.ico added

--- a/frontend/components/header.html
+++ b/frontend/components/header.html
@@ -27,7 +27,7 @@
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Favicon -->
-  <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/images/01FCLogo.ico" type="image/x-icon" />
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/static/style.css" />
