music_card image w and h

--- a/frontend/components/music_card.html
+++ b/frontend/components/music_card.html
@@ -27,7 +27,7 @@
 
       <div class="back">
         <div class="musicImg">
-          <img src="{{.Image}}" alt="{{.Name}}" />
+          <img src="{{.Image}}" alt="{{.Name}}" width="240" height="240" />
         </div>
         <div class="musicContent">
           <div class="section">
